[Feature] - add kenburns effect to image, enum for BRoll types, fixed cropped image

--- a/src/index.css
+++ b/src/index.css
@@ -133,6 +133,19 @@ input[type='range']::-webkit-slider-thumb {
 	height: 20px;
 }
 
+img.kenburns-effect {
+	animation: kenburns 2s infinite alternate-reverse;
+}
+
+@keyframes kenburns {
+	from {
+		scale: var(--scaleX) var(--scaleY);
+	}
+	to {
+		scale: 1 1;
+	}
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
